Fix sidebar days background when on mobile

--- a/view.react/src/components/sidebar/Sidebar.module.scss
+++ b/view.react/src/components/sidebar/Sidebar.module.scss
@@ -36,6 +36,8 @@
 }
 
 .days {
+  background-color: white;
+  width: 105%;
   font-size: 1.6rem;
   color: $BLACK-COLOR;
   padding: 2rem 0 0 2rem;
